# nexcore-combinatorics

./: Cargo.toml  README.md
examples/: hook_infrastructure_analysis.rs
src/: catalan.rs  cycle.rs  derangement.rs  grid_paths.rs  grounding.rs  josephus.rs  lib.rs  linear_extensions.rs
