[package]
name = "nexcore-combinatorics"
version = "0.1.0"
edition = "2024"
description = "Combinatorial algorithms from Dudeney cross-domain transfer: Catalan numbers, derangements, cycle decomposition, Josephus problem, linear extensions"
license = "MIT"

[dependencies]
nexcore-lex-primitiva = { workspace = true }
stem-number-theory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
